# gm-roller

./: LICENSE  README.md  main.py  pyproject.toml
data/characters/: cid.json  fighter.json  rogue.json  saridim.json  scout.json  warrior.json
src/gm_roller/: __init__.py  cli.py
src/gm_roller/combat/: __init__.py  options.py  service.py
src/gm_roller/dice/: __init__.py  conditions.py  context.py  effects.py  engine.py  pipeline.py  registry.py  results.py  spec.py
src/gm_roller/gui/: __init__.py  app.py  widgets.py
src/gm_roller/models/: __init__.py  attack.py  character.py
src/gm_roller/storage/: __init__.py  characters.py  errors.py
tests/: test_cli.py  test_combat_service.py  test_dice.py  test_storage.py
