[project]
name = "gm-roller"
version = "0.1.0"
description = "D&D 5e combat dice helper for GMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "d20>=1.1.2",
    "pydantic>=2.13.4",
]

[project.scripts]
gm-roller = "gm_roller.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gm_roller"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
