[project]
name = "gm-roller"
version = "1.0.0"
description = "Combat dice roller for tabletop game masters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2",
    "d20>=1.1.2",
    "pydantic>=2.13.4",
]

[project.scripts]
gm-roller = "gm_roller.cli:main"
gm-roller-gui = "gm_roller.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gm_roller"]

[tool.hatch.build.targets.wheel.force-include]
"data/characters" = "gm_roller/data/characters"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
